# Taima

./: .ccls  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: type.h
src/: main.c
